# bevy_brp_extras

./: .gitignore  .todo.json  ARCHIVE_NOTICE.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  check_parallel_results.sh  debug_launcher.sh  launch_test_apps.sh  plan_mutate_resource_fix.md  run_parallel_test.sh  rustfmt.toml  test_parallel_crash.sh  test_parallel_crash_nohup.sh
.cargo/: config.toml
.claude/: settings.local.json
.claude/commands/: brp_agent_tests_original.md  single_test.md  test_config.json  test_runner.md
.claude/commands/tests/: app_launch_status.md  brp_extras_methods.md  data_operations.md  debug_mode.md  discovery.md  format_discovery_with_plugin.md  introspection.md  large_response.md  no_plugin_tests.md  registry_discovery.md  watch_commands.md  workspace_disambiguation.md
.github/workflows/: ci.yml
examples/: extras_plugin.rs  extras_test.rs  format_test.rs  no_extras_plugin.rs
src/: debug_mode.rs  discovery.rs  format.rs  keyboard.rs  lib.rs  plugin.rs  screenshot.rs  shutdown.rs
src/discovery/: core.rs  error.rs  examples.rs  handler.rs  mod.rs  mutation.rs  registry.rs  spawn.rs  types.rs
tests/: keyboard.rs
