[package]
name = "bevy_brp_extras"
version = "0.2.0"
edition = "2024"
authors = ["natepiano <slicks.curable.0k@icloud.com>"]
description = "Extra BRP methods for Bevy apps including screenshot and shutdown capabilities"
readme = "README.md"
repository = "https://github.com/natepiano/bevy_brp_extras"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev", "remote", "debugging", "brp"]
categories = [
  "game-development",
  "development-tools",
  "development-tools::debugging",
]

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
  "bevy_remote",
  "bevy_render",
  "bevy_window",
  "bevy_winit",
  "bevy_log",
  "bevy_sprite",
  "bevy_core_pipeline",
  "x11",
] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }

[lints.rust]
missing_docs = "deny"

[lints.clippy]
# Our strict lints
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"

# Enable lint groups as errors (with lower priority so allows can override)
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# Allow specific lints that conflict with Bevy patterns
multiple_crate_versions = "allow"
